<resources>
    <!-- Facebook Application ID -->
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="facebook_application_id" translatable="false"></string>
    <string name="facebook_login_protocol_scheme" translatable="false"></string>

    <string name="app_name">MultiPartyLoginExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--Navigation View-->
    <string name="nav_title_user">not signed</string>
    <!--signup-->
    <string name="signup_login_failed">Login failed</string>
    <string name="signup_creat_account_loading">Creating Account...</string>
    <string name="signup_enter_valid_name">at least 3 characters</string>
    <string name="signup_enter_valid_address">Enter Valid Address</string>
    <string name="signup_enter_valid_email_address">Enter a valid email address</string>
    <string name="signup_enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="signup_enter_valid_password_number">between 4 and 10 alphanumeric characters</string>
    <string name="signup_enter_valid_password_match">Password Do not match</string>
    <string name="signup_laoyut_hint_name">Name</string>
    <string name="signup_laoyut_hint_address">Address</string>
    <string name="signup_laoyut_hint_mobile_number">Mobile Number</string>
    <string name="signup_laoyut_hint_email">Email</string>
    <string name="signup_laoyut_hint_password">Password</string>
    <string name="signup_laoyut_hint_repassword">Re-enter Password</string>
    <string name="signup_laoyut_hint_create_account">Create Account</string>
    <string name="signup_laoyut_text_link_login">Already a member? Login</string>
    <string name="signup_laoyut_hint_login">Login</string>
    <string name="signup_text_email_duplicate"> The email address is already in use by another account.</string>

    <!--signin-->
    <string name="signin_authenticating">Authenticating...</string>
    <string name="signin_authenticating_password_not_correct">password is not correct</string>
    <string name="signip_enter_valid_email_address">Enter a valid email address</string>
    <string name="signip_laoyut_text_creat_account">No account yet? Create one</string>
    <string name="signip_laoyut_text_forget_pwd">forget password ?</string>
    <string name="signip_text_vaild_email">Please go to the Email to verify.</string>
    <!--ForgetPassword-->
    <string name="forget_password_button_send_reset_email">Send</string>
    <string name="forget_password_hint_send_reset_email">User Email</string>
    <string name="forget_password_send_failed">Failed</string>
    <string name="forget_password_title_already_send">Send Success</string>
    <string name="forget_password_message_already_send">The reset password email already sent to your email. Please check your email and reset the password.</string>
    <!--Dialog-->
    <string name="dialog_text_confirm">confirm</string>
    <string name="dialog_text_reverify">reverify</string>
    <string name="dialog_text_cancel">cancel</string>
    <string name="dialog_title_signup_email_verify">Register Successful</string>
    <string name="dialog_message_signup_email_verify">Please check your email address. \nIf you have not received a verification email, please check your spam folder. The \n email filter sometimes incorrectly moves it to the spam folder. \nThank you!</string>
    <string name="dialog_title_signin_email_verify">Verify Email</string>
    <string name="dialog_title_account_connect_failure">Connect Failure</string>
    <string name="dialog_message_account_connect_failure">Please check if it is a problem with the network environment.</string>
    <string name="dialog_title_account_duplicate">Email Duplicate</string>
    <string name="dialog_message_account_duplicate">The email already exists.Please use another method to login.</string>
</resources>
