<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="56dp"
    android:paddingRight="24dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:src="@drawable/logo_google" />

    <!--  Email Label -->


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/signup_laoyut_hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/signup_laoyut_hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="15dp"
        android:padding="12dp"
        android:text="@string/signup_laoyut_hint_login" />

    <TextView
        android:id="@+id/link_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/signip_laoyut_text_forget_pwd"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/com_facebook_blue"
            android:drawableStart="@drawable/com_facebook_button_icon"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:text="@string/common_signin_button_text"
            android:textColor="@android:color/white" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"></com.google.android.gms.common.SignInButton>
        <Button
            android:id="@+id/sign_in_normal"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:text="@string/common_signin_button_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/signip_laoyut_text_creat_account"
        android:textSize="16sp" />


    <!--  Password Label -->


</LinearLayout>